# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
02-workflow-orchestration/: docker-compose.yml
03-data-warehouse/: DLT_upload_to_GCP.ipynb  gcp.py  homework.sql  pyproject.toml
04-analytics-engineering/: README.md
05-data-platforms/zoomcamp/pipeline/: pipeline.yml
05-data-platforms/zoomcamp/pipeline/assets/ingestion/: requirements.txt  trips.py
05-data-platforms/zoomcamp/pipeline/assets/staging/: trips.sql
06-batch/: data_types
06-batch/code/: download_data.sh
06-batch/notebooks/: 06-Homework.ipynb  GroupBy.ipynb  SQL-Spark.ipynb  Spark_GCS.ipynb  nyc-taxi.ipynb  pyspark.ipynb  spark_sql.py  spark_sql_v2.py  test.ipynb
06-batch/notebooks/data/yellow/repartitioned/: .part-00000-d9421043-fc78-49c2-a296-47777276431c-c000.snappy.parquet.crc  .part-00001-d9421043-fc78-49c2-a296-47777276431c-c000.snappy.parquet.crc  .part-00002-d9421043-fc78-49c2-a296-47777276431c-c000.snappy.parquet.crc  .part-00003-d9421043-fc78-49c2-a296-47777276431c-c000.snappy.parquet.crc
06-batch/notebooks/data/zones/: .part-00000-87afd5e9-d59a-4dce-89fe-c4ad1a32f439-c000.snappy.parquet.crc
06-batch/notebooks/tmp/revenue-zones/: .part-00000-21c11c3e-3c6e-4eb6-9701-a5f4e10c85b8-c000.snappy.parquet.crc  .part-00001-21c11c3e-3c6e-4eb6-9701-a5f4e10c85b8-c000.snappy.parquet.crc
dlt-workshop/: taxi_pipeline.py
dlt-workshop/dlt_2026/cohorts/2026/workshops/dlt/: dlt_Pipeline_Overview.ipynb
pipeline/: ingest_data.py  notebook.ipynb  pipeline.py  queries.sql
week_01/terrademo/: main.tf  variables.tf
(+187 files in other folders)
